Bug #1512 - On firefox for mac, on the homepage there is a gap between the footer and the bottom navigation

--- a/wp-content/mu-plugins/css/openlab-toolbar.less
+++ b/wp-content/mu-plugins/css/openlab-toolbar.less
@@ -399,6 +399,9 @@
                 }
             }
         }
+        &.navbar-location-footer{
+            margin-bottom: 0;
+        }
     }
     /**sitewide header elements on admin and group sites (mobile only)**/
     &.navbar-location-oplb-bs{
